--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -35,4 +35,6 @@
       "value": "#42b883"
     }
   ],
-  "workbench.iconTheme": "mate
+  "workbench.iconTheme": "material-icon-theme",
+  "vscode-graphql.useSchemaFileDefinitions": false
+}
