--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -4,13 +4,14 @@
 	email = fertimo99@gmail.com
 	name = FernandoTimo
 [alias]
+	a = add .
+	s = status
+	c = commit -m 
 	b = branch
 	bs = branch -M main 
 	p = push
-	pf = git push -f
-	pu = git push -u
+	pf = push -f origin main
+	pu = push -u origin main
 	last = log -1 HEAD
 	file = config --global -e
 	show = "!gitk"
-	a = add .
-	s = status
