--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -14,4 +14,7 @@
 	pu = push -u origin main
 	last = log -1 HEAD
 	file = config --global -e
+	all = "!f() { git commit -am \"$@\" && git p; }; f"
 	show = "!gitk"
+	um = config --global user.email
+	un = config --global user.name}
