--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -6,12 +6,14 @@
 [alias]
 	a = add .
 	s = status
-	c = commit -m 
+	c = commit -m $*
+	ac = commit -am $*
 	ch = checkout -- . 
 	cch = rm -r --cached 
 	b = branch
 	bs = branch -M main 
 	r = git restore .
+	rr = reset --soft HEAD
 	p = push
 	pf = push -f origin main
 	pu = push -u origin main
