--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -28,3 +28,4 @@
 	lf = "!git config --local user.name FernandoTimo && git config --local user.email fertimo99@gmail.com"
 	gf = "!git config --global user.name FernandoTimo && git config --global user.email fertimo99@gmail.com"
 asdsad
+qweqweqw
