--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -39,5 +39,6 @@
   ],
   "workbench.iconTheme": "material-icon-theme",
   "vscode-graphql.useSchemaFileDefinitions": false,
-  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe"
+  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "color-highlight.languages": ["*"]
 }
