--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -17,27 +17,27 @@
   "editor.fontLigatures": true,
   "peacock.favoriteColors": [
     {
-      "name": "",
+      "name": ".",
       "value": "#f9e64a"
     },
     {
-      "name": "",
+      "name": ".",
       "value": "#215732"
     },
     {
-      "name": "",
+      "name": ".",
       "value": "#330f26"
     },
     {
-      "name": "",
+      "name": ".",
       "value": "#fa0"
     },
     {
-      "name": "",
+      "name": ".",
       "value": "#42b883"
     },
     {
-      "name": "a",
+      "name": ".",
       "value": "#3c7c72"
     },
     {
