--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -32,4 +32,4 @@
 	Frontend = clone https://github.com/FernandoTimo/Frontend-Next Frontend
 	Backend = clone https://github.com/FernandoTimo/Backend-Express Backend
 	App = "!git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend"
-	nr = "!f() { echo \"#$2\" >> README.md && git init && git add . && git commit -m Inicio && git branch -M main && git remote add origin https://github.com/\"$1\"/\"$2\".git && git push -u origin main; }; f"
+	nr = "!f() { echo \"#$2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git init && git add . && git commit -m Inicio && git branch -M main && git remote add origin https://github.com/\"$1\"/\"$2\".git && git push -u origin main; }; f"
