--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -14,8 +14,8 @@
 	bs = branch -M main 
 	r = restore .
 	rr = reset --soft HEAD~
-	ra = remote add origin https://github.com/
-	rs = remote set-url origin https://github.com/
+	ra = "!f() { remote add origin https://github.com/$1/$2.git; };f"
+	rs = "!f() { remote set-url origin https://github.com/$1/$2.git; };f"
 	p = push
 	pf = push -f origin main
 	pu = push -u origin main
@@ -39,3 +39,7 @@
 	nr = "!f() { echo \"#$2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git init && git add . && git commit -m Inicio && git branch -M main && git remote add origin https://github.com/\"$1\"/\"$2\".git && git push -u origin main; }; f"
 
 	nfp = "!f() { [ $1 == 'Timoideas' ] && ( echo \"#$2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git init && git config --local user.name Timoideas && git config --local user.email Timoideas@hotmail.com && git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend && git add . && git commit -m Inicio && git branch -M main && git remote add origin https://github.com/\"$1\"/\"$2\".git && git push -u origin main)  || ( echo \"#$2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git init && git config --local user.name FernandoTimo && git config --local user.email fertimo99@gmail.com && git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend && git add . && git commit -m Inicio && git branch -M main && git remote add origin https://github.com/\"$1\"/\"$2\".git && git push -u origin main;); } ; f"
+[http]
+	sslVerify = true
+[credential]
+	helper = manager-core
