--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -23,7 +23,7 @@
 	file = config --global -e
 	all = "!f() { git commit -am \"$*\" && git p; }; f"
 	show = "!gitk"
-	git = "!f(){ rm -rf .git; };f"
+	k = "!f(){ rm -rf .git; };f"
 	link = "!f(){ rm ~/.gitconfig && cp -rl Git/.gitconfig ~/; };f"
 	un = config --global user.name 
 	um = config --global user.email 
