--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -14,7 +14,7 @@
 	bs = branch -M main 
 	r = restore .
 	rr = reset --soft HEAD~
-	ra = "!f() { [ $1 == 'T' ] && (git remote add origin git@github-Timoideas:Timoideas/$2.git) || ([ $1 == 'F' ] && (git remote add origin git@github-FernanandoTimo:FernandoTimo/$2.git)) };f"
+	ra = "!f() { ([ $1 == 'T' ] && (git remote add origin git@github-Timoideas:Timoideas/$2.git)) || ([ $1 == 'F' ] && ( git remote add origin git@github-FernandoTimo:FernandoTimo/$2.git)) };f"
 	rs = "!f() { git remote set-url origin git@github-\"$1\":\"$1\"/\"$2\".git ; };f"
 	p = push
 	pf = push -f origin main
@@ -36,8 +36,9 @@
 	nf = clone https://github.com/FernandoTimo/Frontend-Next Frontend
 	nb = clone https://github.com/FernandoTimo/Backend-Express Backend
 	na = "!git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend"
-	e = "!f(){ echo \"#$1\" >> README.md && echo \"desktop.ini\" >> .gitignore }f"
 
-	i = "!f() { ([ !$2 ] && ( echo \"Second parameter, repository name expected. \")) || ([ $1 == 'T' ] && ( git init && git lt && git e $1 && git ac Inicio && git ra $1 && git pu;)) || ([ $1 == 'F' ] && ( git init && git lf && git e $1 && git ac Inicio && git ra $1 && git pu;)) || (echo \"Invalid value, try: T, F \") }; f"
+	i = "!f() { ([ -z $1 ] &&  echo \"Please enter $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) in the first arugument.\")  || ( [[ $1 != 'T' && $1 != 'F' ]] && echo \"Invalid fisrt argument try: $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) \") || ([ -z $2 ] &&  echo \"$(tput smul)REPOSITORY_NAME$(tput rmul) in second argument is$(tput bold) $(tput setaf 7)$(tput setab 1) requiered $(tput sgr0). \") || ( git init  && git l$1 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Inicio && git ra $1 $2 && git pu )}; f"
+		
+	nfp = "!f() { git na && git i $1 $2 } ; f"
+
 	
-	nfp = "!f() { ([ !$2 ] && ( echo \"Second parameter, repository name expected. \")) || ([ $1 == 'T' ] && ( git e $1 && git init && git config --local user.name Timoideas && git config --local user.email Timoideas@hotmail.com && git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend && git add . && git commit -m Inicio && git bs && git remote add origin git@github-\"$1\":\"$1\"/\"$2\".git && git pu))  || ( ([ $1 == 'F' ] && git e $1 && git init && git config --local user.name FernandoTimo && git config --local user.email fertimo99@gmail.com && git clone https://github.com/FernandoTimo/Frontend-Next Frontend && git clone https://github.com/FernandoTimo/Backend-Express Backend && git add . && git commit -m Inicio && git bs && git remote add origin git@github-\"$1\":\"$1\"/\"$2\".git && git pu;)); } ; f"
