--- a/vsCode/User/settings.json
+++ b/vsCode/User/settings.json
@@ -140,8 +140,8 @@
   "workbench.iconTheme": "material-icon-theme",
   "vscode-graphql.useSchemaFileDefinitions": false,
   "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
-  "color-highlight.languages": ["*"],
-  "window.menuBarVisibility": "compact",
-  "workbench.statusBar.visible": false,
+  "color-highlight.languages": [
+    "*"
+  ],
   "explorer.confirmDelete": false
 }
