--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -40,3 +40,4 @@
 	ht = "!f() { echo \"$(tput setaf 8) >--     https://github.com/Timoideas/$1     --< \"; };f"
 	i = "!f() { ([ -z $1 ] &&  echo \"Please enter $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) in the first arugument.\")  || ( [[ $1 != 'T' && $1 != 'F' ]] && echo \"Invalid fisrt argument try: $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) \") || ([ -z $2 ] &&  echo \"$(tput smul)REPOSITORY_NAME$(tput rmul) in second argument is$(tput bold) $(tput setaf 7)$(tput setab 1) requiered $(tput sgr0). \") || ( git init  && git l$1 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Inicio && git ra $1 $2 && git pu && git last && printf \"\n$(tput setaf 8) Repositorio creado y enlazado correctamente para: \n\" && git l && name = [$1 == 'T' ] && git h$1 $2)}; f"
 	nfp = "!f() { (git na && git i $1 $2) } ; f"
+	nr = "!f() { gh repo create $1 -y -d $2 -h http://Timoideas.com --public; }; f"
