--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -21,6 +21,7 @@
 	pu = push -u origin main
 	file = config --global -e
 	# SHOW - logs
+	si = "!f() { git b && git srr && git sc --oneline && git l ; }; f"
 	sei = "!gitk"
 	srr = config --get remote.origin.url
 	sc = log -1 HEAD
@@ -49,10 +50,10 @@
 	ht = "!f() { echo \"$(tput setaf 8) >--     https://github.com/Timoideas/$1     --< \"; };f"
 	msg = "!f() { printf \"\n$(tput setaf 8) Repositorio creado y enlazado correctamente para: \n\" && git l && git h$1 $2; } ; f"
 	validate = "!f() { ([ -z $1 ] &&  echo \"Please enter $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) in the first arugument.\")  || ( [[ $1 != 'T' && $1 != 'F' ]] && echo \"Invalid fisrt argument try: $(tput setaf 3) T $(tput sgr0) or $(tput setaf 3) F $(tput sgr0) \") || ([ -z $2 ] &&  echo \"$(tput smul)REPOSITORY_NAME$(tput rmul) in second argument is$(tput bold) $(tput setaf 7)$(tput setab 1) requiered $(tput sgr0). \") }; f"
-	ip = "!f() { git nr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sll && git msg; }; f"
+	ip = "!f() { git nr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sc && git msg; }; f"
 	# FULL - comands
-	a = "!f() { git ac \"$*\" && git p && git sll; }; f"
-	i = "!f() { git validate $1 $2 || ( git nr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sll && git msg)}; f"
+	a = "!f() { git ac \"$*\" && git p && git sc; }; f"
+	i = "!f() { git validate $1 $2 || ( git nr $1 $2 && echo \"# $2\" >> README.md && echo \"desktop.ini\" >> .gitignore && git ac Repository created successfully. && git pu && git sc && git msg)}; f"
 	ip = "!f() { (git na && git i $1 $2) } ; f"
 	# GH - cli
 	gh = "!f() { bash ~/gh$1.sh; };f"
